test/syntax/fail/when/not_equiv0.sync
let node f x a b =
  let c = (a when true) + (b when not true) in
  true

